@@ -107,6 +107,7 @@ namespace OpenBabel
       //! Constructor
       explicit OBForceFieldGhemical(const char* ID, bool IsDefault=true) : OBForceField(ID, IsDefault)
       {
+        _validSetup = false;
         _init = false;
         _rvdw = 7.0;
         _rele = 15.0;
